[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distriq"
version = "0.1.0"
description = "A distributed job scheduler"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "redis>=8.0.0",
    "pydantic-settings>=2.14.1",
    "croniter>=6.2.2",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "hypothesis>=6.100.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/distriq"]